[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["rollurioari <rollurioari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
